<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:padding="@dimen/common_padding_default"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/ibSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/common_padding_medium"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@id/ibSub"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toBottomOf="@id/ibSub"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:text="5"
            android:contentDescription="@string/description_new_quantity_alt"
            tools:text="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/common_padding_min"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toEndOf="@id/tilNewQuantity"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toBottomOf="@id/ibSub"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_total_price"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:layout_marginStart="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@id/ibSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toBottomOf="@id/ibSub"/>
</androidx.constraintlayout.widget.ConstraintLayout>
